--- a/frontend/khelkhoj/package.json
+++ b/frontend/khelkhoj/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-crop": "^11.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.10.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
