--- a/frontend/khelkhoj/package.json
+++ b/frontend/khelkhoj/package.json
@@ -13,6 +13,7 @@
     "fuse.js": "^7.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-image-crop": "^11.0.5",
     "react-router-dom": "^5.2.0",
